--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-Login==0.6.2
 Flask-MySQLdb==1.0.1
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
+gunicorn==20.1.0
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
